# sit-search-cli

./: README.md  pyproject.toml
API/SIT Search/: bruno.json  test.bru
src/sit_search_cli/: __init__.py  __main__.py  api.py
