[project]
name = "sit-search-cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hiram Tanner", email = "101851090+2gn@users.noreply.github.com" },
]
dependencies = ["requests>=2.32.3", "rich>=13.7.1"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"ss" = "sit_search_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sit_search_cli"]
